name:                lazy-random-bytestring
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mcmayer/lazy-random-bytestring#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 mcmayer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lazy-random-bytestring
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , bytestring
                     , word8
  ghc-prof-options: -fprof-auto
  ghc-options: -O2 -fforce-recomp -optc "-funroll-loops" -fllvm -threaded -funbox-strict-fields -ddump-asm -ddump-simpl
    
